--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -4,21 +4,17 @@
 }
 
 body {    
-    background:url(wood5.jpg);        
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;  
+   background:url(groovepaper.png); 
+   border-top:solid #808080 1px;
+    
 }
 
 header {
     padding-top: 20px;
     height:33px;
     margin-bottom: 25px;
-    background: #ffffff; 
-    -webkit-box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.65);
-    -moz-box-shadow:  1px 2px 3px rgba(0, 0, 0, 0.65);
-    box-shadow:  1px 2px 3px rgba(0, 0, 0, 0.65);
+    background:#fff;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
 
 header img {	
@@ -81,7 +77,7 @@ footer {
     height:80px;    
     text-align:right;  
     margin-top: 0px;  
-    background:url(box.jpg); 
+    background:url(subtle_freckles.png); 
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 0px rgba(255, 255, 255, 0.25);
     -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 0px rgba(255, 255, 255, 0.25);
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 0px rgba(255, 255, 255, 0.25);  
@@ -118,7 +114,7 @@ footer nav ul li a:hover {
 
 .footmid {	
 	border-top: 1px solid #efefef;
-    background:#fff;
+    background:#fff; 
 	height:50px;
 	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);	
 }
@@ -132,7 +128,7 @@ div.div-title {
 	margin-bottom: 0px; 
 	background: url(ccr.jpg); 
 	height:282px;   
-	-webkit-box-shadow: 0 2px 3px rgba(0,0,0,.45); -moz-box-shadow: 0 2px 3px rgba(0,0,0,.45); box-shadow: 0 2px 3px rgba(0,0,0,.45); 
+	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
 
 div.div-title h3 {  
@@ -160,7 +156,7 @@ div.div-title a {
 }
 
 div.div-title a:hover {
-    color: #00ffff;
+    color: #ff8080;
     text-decoration: none;
 }
 
@@ -169,9 +165,9 @@ div.div-title a:hover {
 
 .mid {	
 	border-top: 5px solid #efefef;
-	background:#fff;
+	background:#fff; 
 	padding: 15px;
-	min-height: 410px;
+	min-height: 610px;
 	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
 
@@ -184,6 +180,7 @@ div.div-title a:hover {
 .main {
  
     margin-left: 255px; 
+	min-height: 600px;
 
 }
 
@@ -289,6 +286,8 @@ div.div-title a:hover {
     margin-top: 19px;
     height:400px;	
     border-top: solid 1px #c0c0c0;
+	
+	
   
 }
 
@@ -332,11 +331,31 @@ option {
 /* Trip show page */
 
 .tripshow {	 
-    background: #ffffff;
+    background:#fff;          
     padding: 1em;
     -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
-    border-top: 10px solid #808080; 
+    border-top: 1px solid #f4f4f4;
 }
+
+#tripshowtop {
+	
+	 padding: 1em;
+	 background:url(col2.png); 
+	 
+	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
+
+     height:20px; 
+}
+
+
+
+#tripshowtop .fb-like {
+	
+	top: -25px;
+	left: 760px;
+	
+}
+
 
 
 .tripshow h1 {	
@@ -346,27 +365,200 @@ option {
   
 }
 
+.tripimg {
+	
+	
+    border-bottom: dotted 1px #c0c0c0;
+	
+	
+}
 
 .gallery {	 
-    width: 100%;
-    margin-left: auto;
+    width: 700px;
+    
     margin-right: auto;
     overflow: visible;
-    border-top: dotted 1px #c0c0c0;
-    border-bottom: dotted 1px #c0c0c0;	 
+	margin-top: -330px;
+     margin-bottom: 5px;
+	 min-height: 340px;
 }
 
 
 .gallery img {	
-    margin-bottom: 5px;
-    margin-left: 10px;
+    margin-bottom: 0px;
+    margin-left: 5px;
     margin-top: 10px;
     width:100px; 
     height:70px;
 }
 
 
+.availability {
+	
+	background: url(wood.png); 
+	 width: 223px;
+	 margin-left: auto;
+	 margin-top: 10px;
+	 margin-right: 0px;
+	
+	color:#fff;
+	height:300px;
+	padding:15px;
+	
+     box-shadow: 0pt 0pt 2px rgb(0, 0, 0);
+	 
+  
+	
+}
 
+.availability p {
+	
+	font-size:12px;
+	font-weight: bold;
+	color:#400040;
+	font-family: Helvetica,Arial,sans-serif;
+	
+}
+
+
+.availability h2 {
+	
+	text-shadow: 0pt 1px 2px rgb(0, 0, 0);
+	color: #fff;
+	font-weight: 900;
+	font-family: Helvetica,Arial,sans-serif;
+	font-size: 42px;
+	text-align: center;
+	background: 
+	
+}
+
+
+.availability h4 {
+	
+	
+	color: #c0c0c0;
+	font-weight: 900;
+	font-family: Georgia;al,sans-serif;
+	font-size: 18px;
+	text-align: center;
+	
+	
+	
+}
+
+.availability h3 {
+	
+	color: #804040;
+	
+}
+
+
+.availability ul li {
+	
+	list-style: none;
+	margin-bottom: 5px;
+	background:#e9e9e9;
+	padding:5px;
+	margin-left: -18px;
+	margin-right: -18px;
+	box-shadow: 0pt 0pt 2px rgb(0, 0, 0);
+}
+
+
+.tripinfo {
+	
+	min-height:450px;
+	
+}
+
+.description {
+	
+	margin-top: -412px;
+	width: 640px;
+	margin-right: auto;
+    overflow: visible;
+	margin-bottom: 5px;
+	
+	
+}
+
+.description p {
+	
+    margin-left: 5px;
+	margin-top: 10px;
+}
+
+
+
+
+.pricing {
+	
+	background:#fff;;
+	padding:5px;
+	width: 640px;
+	margin-top:5px;  
+	
+}
+
+
+.pricing h4 {
+	
+	font-weight:bold;
+	color: #808080;
+	margin-top: 5px;
+}
+
+
+
+#accomodation td, th {
+		
+	border-bottom:dotted 1px #000;
+	background:	#fff;
+	min-width:220px;
+	color:#515151;
+}
+
+
+
+
+#extras td, th {
+	
+	
+	border-bottom:dotted 1px #000;
+	background:	#fff;
+	min-width:220px;
+	color:#515151;
+}
+
+
+
+
+.more {
+	 
+	 padding: 10px;
+	 width: 230px;
+	 margin-left: auto;
+	 
+	 margin-top: 7px;
+	 margin-right: 5px;
+	 min-height:400px;
+	 border-left: 1px dotted #f4f4f4;
+	
+}
+
+.more ul {
+	
+	margin-top: 10px;
+	line-height: 15px;
+	line-height:110%;
+}
+
+.more ul li {
+	
+	margin-bottom: 10px;
+	
+}
 
 /* About page */
 
@@ -417,6 +609,42 @@ a.book_button:hover {
    background-color:#80ff00;
    text-decoration:none;
 }
+
+a.reserve_button {	
+   padding:5px;
+   margin-left: auto;
+   margin-right: auto;
+   display: block;
+   text-align: center;
+   font-weight: bold;
+   
+   background:#ff8000;background-repeat:no-repeat;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);text-shadow:0 1px 1px black ;color:#fff;font-size:18px;line-height:normal;-webkit-border-radius:0px;-moz-border-radius:0px;border-radius:0px;-webkit-box-shadow:inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);-moz-box-shadow:inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);box-shadow:inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);-webkit-transition:0.1s linear all;-moz-transition:0.1s linear all;-ms-transition:0.1s linear all;-o-transition:0.1s linear all;transition:0.1s linear all;}.btn:hover{background-position:0 -15px;color:#333;text-decoration:none; 
+}
+
+
+a.reserve_button:hover {	
+   background-color:#ff9562;
+   text-decoration:none;
+}
+
+
+a.date_button {
+	margin-left: auto;
+   margin-right: auto;
+   display: block;
+   text-align: left;
+   font-weight: bold;
+   color: #fff;
+   
+   background:url(calendar.png) no-repeat right ; 
+}
+
+a.date_button:hover {
+	
+	
+	
+}
+
 
 a.check_button {	
    margin-left: auto;
@@ -488,15 +716,19 @@ a.check_button {
 
 
 .news {	
-    cursor:pointer;
-    width: 90px;
-    height: 25px;
-    background: #ff0000;
-    border: #ff0000;
-    color: #fff;
-    font-weight: bold; 
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
+   
+  cursor:pointer;
+   border: none;
+   padding: 5px
+   border-radius: 0px;
+   background: #ff8040;
+   border: #ff0000;
+   color: #fff;
+   font-weight: bold; 
+   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
+	2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
 	
+}
 	
 	
 }
@@ -556,7 +788,7 @@ a.back_button:hover {
 	border-top: solid 1px #c0c0c0;
 }
 
-
+/*  */
 
 .nimbleLoader{
     width:110px;
@@ -589,56 +821,11 @@ a.back_button:hover {
 	
 }
 
-.pricing {
-	
-	background:#f7f7f7;
-	padding:5px;
-	
-}
-
-
-.pricing h4 {
-	
-	font-weight:bold;
-	color: #808080;
-	
-}
-
-#accomodation td, th {
-		
-	border-bottom:solid 1px #ffffff;
-	background:	#f7f7f7;
-}
-
-
-
-
-#extras td, th {
-	
-	
-	border-bottom:solid 1px #ffffff;
-	background:	#f7f7f7;
-	min-width:120px;
-}
 
 
 
 
 
-.extras ul {
-		  
-  margin-top: 10px;		
-  height:100px;
-		
-    -webkit-column-count: 1;
-       -moz-column-count: 2;
-            column-count: 3;
-}
-
-.extras ul li {
-
-	
-}
 
 .loading_bar{
   position: absolute;
@@ -723,22 +910,16 @@ a.back_button:hover {
 }
 
 .hellobar {
-
-  top: 0px;
-  left: 0px;
   width: 100%;
   height: 30px;
-  z-index: 100;
   padding: 5px 0 5px 0;
   text-align: center;
   font-size: 16px;
-  color: #fff;
-  background:url(back.jpg);       
-  box-shadow: 0px 0px 5px #888888;
-  -moz-box-shadow:0px 0px 5px #888888;
-  -webkit-box-shadow:0px 0px 5px #888888;
-  border-bottom: 3px solid #fff;
+  color: #000; 
   font-family: Georgia,Times New Roman,Times,serif;
+  background:url(col2.png); 
+  margin-top: 15px;
+  margin-bottom: 6px;
   
 }
 
@@ -746,8 +927,8 @@ a.back_button:hover {
 .hellobarwrapper {
 	
 	width: 940px;
-	margin:0 auto;
-	position:relative;
+	
+	
 	
 }
 
@@ -755,7 +936,7 @@ a.back_button:hover {
 .hellobar p {
 	
 	float:left;
-	color:#fffff7;
+	 color: #000;
 	margin-bottom:0px;
 	padding:11px 0px 0px 3px;
 	margin-left: 6px;
@@ -771,8 +952,8 @@ a.back_button:hover {
     
 	border:none;
     width: 300px;	
-    margin-top: -14px;
-    margin-right: 175px;
+    margin-top: -12px;
+    margin-right: 165px;
 	float:right;
  
 	
@@ -801,11 +982,18 @@ a.back_button:hover {
 
 .hellobar .fb-like {
 	
-	top: -22px; 
-	left: 672px;
+	top: -20px; 
+	left: 642px;
 	
 }
 
+
+.check li {
+	list-style:none;
+	color: #808080;
+	
+	
+}
 
 @font-face {
     font-family: 'PacificoRegular';
