--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,12 +6,12 @@
    <nav class="round">
     <ul>      
       
-      <li><%= link_to "About", about_path %> / </li>
+      <li><%= link_to "About", about_path %>  </li>
       
-      <li><%= link_to "Shop", "http://www.facebook.com/pages/Thrill-Engine/199223676806364?sk=app_149715688441437" %> / </li>
+      <li><%= link_to "Shop", "http://www.facebook.com/pages/Thrill-Engine/199223676806364?sk=app_149715688441437" %>  </li>
       
       <% if signed_in? %>
-      <li><%= link_to "Profile", current_user %> / </li>
+      <li><%= link_to "Profile", current_user %>  </li>
       <% end %>
      
       <% if signed_in? %>
