--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -21,7 +21,10 @@
     <%= f.text_field :country %>
   </div>
   
- 
+ <div class="field">
+    <%= f.label :continent_id %><br />
+    <%= f.collection_select :continent_id, Continent.all, :id, :name %>
+  </div>
   
   <div class="actions">
     <%= f.submit %>
