--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -663,15 +663,9 @@ a.check_button {
 }
 
 .button {	
-   cursor:pointer;	
-   border: none;
-   padding: 5px 30px;
-   border-radius: 0px;   
-   width: 200px;	
-   color: #fff;
-   font-weight: bold; 	
-   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);	
-}
+   
+   
+   }
 
 .find {	
    cursor:pointer;	
@@ -696,7 +690,7 @@ a.check_button {
    border: none;
    padding: 5px 30px;
    border-radius: 0px;
-   background: #ff0000;
+   background: #ff0080;
    border: #ff0000;
    color: #fff;
    font-weight: bold; 
@@ -715,30 +709,33 @@ a.check_button {
 }
 
 
-.news {	
+.news {
    
   cursor:pointer;
    border: none;
    padding: 5px
    border-radius: 0px;
-   background: #ff8040;
+   background: #ff8080;
+   height: 25px;
    border: #ff0000;
    color: #fff;
-   font-weight: bold; 
+   font-weight: bold;
    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
-	2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
-	
-}
-	
-	
+2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
+
 }
 
-.news:hover {	
-	background: #0000ff;
-	color: #fff;
-	text-decoration: none;
-		
+
+
+
+.news:hover {
+background: #0000ff;
+color: #fff;
+text-decoration: none;
+
 }
+
+
 
 
 .shop {	
