--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,6 +9,22 @@
 
  
 
+</div>
+
+<div class="story">
+
+
+
+
+
+
+
+<h4> If the text above doesn't make sense to you or you simply have questions/feedback/suggestions or whatever, feel free to drop me a line :) - <%= mail_to "emils.veveris@thrillengine.com", "emils.veveris@thrillengine.com" %> </h4>  
+
+
+
+
+
 
 </div>
 
