--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -6,7 +6,7 @@
 
 <script type="text/javascript">var switchTo5x=true;</script><script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'68e77bc2-e6d6-4574-964c-79e8a966b15e'});</script>
 <div style="font: 11px Helvetica,Tahoma,Arial;z-index: 980000!important;cursor: pointer;margin-left: -59px;position: fixed;top: 30%;border:0px solid #ddd;color:#fff; font-weight:bold;padding:10px;border-radius:1px; text-shadow: 1px 1px 1px #000; "}
-<span>&nbsp;Share </span><br /><br />
+<span>&nbsp;Tell a </span><br /> <span>Friend  </span><br /><br />
 <span  class='st_facebook_large' ></span><br />
 <span  class='st_twitter_large' ></span><br />
 
@@ -137,12 +137,12 @@
 <div class="hellobarwrapper">
 <!-- Begin MailChimp Signup Form -->
 
-<p> Hey! Drop Your Email for an Invite, News and Updates </p>
+<p> Hey! Leave Your Email for an Early Invite and Updates </p>
  <div id="mc_embed_signup">
    
    
    <form action="http://thrillengine.us4.list-manage.com/subscribe/post?u=b00a6ce905026bcb1bfd68811&amp;id=ffa803ed98" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">	
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email address here" required>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="" required>
 	<div class="clear"><input type="submit" value="Submit" name="Submit" id="mc-embedded-subscribe" class="news" ></div>  
    </form>
  </div>
