--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -593,6 +593,46 @@ option {
    margin-top:50px;	
 }
 
+
+
+.story {
+	
+	display: inline-block;
+	 text-align:left;
+	 width: 400px;	 
+	 margin-left: 20px;
+	 margin-top: 5px;
+	 padding: 10px;
+     
+
+	
+}
+
+
+
+.story h4 {
+	
+	color: #fff; 
+	font-size:16px;
+	font-weight: bold;
+	font-family: Insolent-Italic, Arial, sans-serif;
+	text-shadow: 0px 0px #000, 1px 1px #000, 2px 2px #000;
+	text-transform: uppercase;
+	
+}
+
+.story p {
+	
+	color:#f8f8f8;
+	
+}
+
+.story a {
+	
+	color: #ff8080;
+	
+}
+
 /* Buttons */
 
 a.book_button {	
@@ -711,18 +751,25 @@ a.check_button {
 
 .news {
    
-  cursor:pointer;
-   border: none;
-   padding: 5px
-   border-radius: 0px;
-   background: #ff8080;
-   height: 25px;
-   border: #ff0000;
-   color: #fff;
-   font-weight: bold;
-   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
-2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
-
+  cursor: pointer; 
+  position: relative; 
+  display: inline-block; 
+  
+  text-align: center; 
+  border: 1px solid transparent; 
+  border-radius: .3em; 
+  font-weight: bold;
+  color: #fcf9f9; 
+  text-shadow: 0pt -1px rgba(34, 25, 25, 0.5);
+  
+  border-color: #c0c0c0;
+  background: -moz-linear-gradient(center top , rgb(235, 83, 103), rgb(224, 71, 81) 50%, rgb(222, 64, 74) 50%, rgb(212, 54, 56)) repeat scroll 0% 0% transparent;
+  
+  
+  height: 25px;
+  
+  )
+  
 }
 
 
@@ -853,7 +900,6 @@ a.back_button:hover {
  width:400px;
  height: 400px;
  overflow:auto;
-
  overflow-x: hidden;
 		
 	
@@ -940,6 +986,7 @@ a.back_button:hover {
 	margin-top: -8px;
 	font-weight: bold;
 	
+	text-shadow: 0pt -1px rgba(34, 25, 25, 0.5);
 	
 }
 
@@ -948,9 +995,9 @@ a.back_button:hover {
 	
     
 	border:none;
-    width: 300px;	
-    margin-top: -12px;
-    margin-right: 165px;
+    width: 270px;	
+    margin-top: -13px;
+    margin-right: 195px;
 	float:right;
  
 	
@@ -970,17 +1017,16 @@ a.back_button:hover {
 
 .hellobar #mc-embedded-subscribe {
 	
-	border:none;
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
-	text-shadow: #000 0px 1px 0px;
-	
+	top: 0px;
+	width: 70px;
+	right:10px;
 }
 
 
 .hellobar .fb-like {
 	
-	top: -20px; 
-	left: 642px;
+	top: -22px; 
+	left: 640px;
 	
 }
 
