--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,11 @@
 </script>
 
 </head>
-  <body>  		
+  <body>
+  	<script type="text/javascript">var _kiq = _kiq || [];</script>
+<script type="text/javascript" src="//s3.amazonaws.com/ki.js/36177/70e.js" async="true"></script>  		
+	
+
 	<%= render 'layouts/header' %>
 	<div class="container">      	  
 	  <div class="content">  
@@ -51,5 +55,13 @@
        </div> 
     </div>
 	<%= render 'layouts/footer' %>
+  
+  <script type="text/javascript">
+setTimeout(function(){var a=document.createElement("script");
+var b=document.getElementsByTagName('script')[0];
+a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0012/8271.js?"+Math.floor(new Date().getTime()/3600000);
+a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+</script>
+  
   </body>
 </html>
