--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="div-title">
-  <h3><%= link_to "Find Trips That Will Make You Feel Alive ", about_path %></h3>
+  <h3><%= link_to "Find a Place to Stay for Your Action Trips ", about_path %></h3>
 </div>
 
 <div class="mid">
