--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,10 +9,12 @@
   <nav class="round">   
       <ul>
        
-      <li> Get in touch: <%= mail_to "feedback@thrillengine.com", "feedback@thrillengine.com" %>  </li>
+      <li> Get in touch: <%= mail_to "emils.veveris@thrillengine.com", "emils.veveris@thrillengine.com" %>  </li>
       <li> <%= link_to "Facebook", 'http://www.facebook.com/pages/Thrill-Engine/199223676806364' %>  </li>
       
       <li> <%= link_to "Twitter", 'http://twitter.com/#!/theThrillEngine' %>  </li>
+      <li> <%= link_to "Vimeo", 'https://vimeo.com/39621018' %>  </li>
+      
       
     </ul>
   </nav>
