--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,7 +3,7 @@
 
 <div class="mbox"
 
-<h3> A platform to connect and reach out for some of the best opportunities to have the time of your life.
+<h3> Adventures That You Are Proud Of!
 
  </h3>
 
@@ -18,13 +18,31 @@
 
 
 
+<h2>THE STORY SO FAR:</h2>
+<h4> Thrill Engine currently is a work in progress, one man operation. Built for finding unique life changing, travel experiences, based on action sports. </h4>
 
+<br></br>
+
+<h2>HOW IT WORKS:</h2>
+<h4>  In the current version all the bookings are handled manually - just email me about booking inquiry and I’ll give you details about full pricing and availability </h4> 
+<br></br>
+
+<h4> However, if you don’t feel comfortable with the fact that this project is still largely under development, then I advise you to book directly from the property owners or similar services (just google the name of the houses). But for all the others I am open to help you find the best trip you ever had! </h4>
+
+
+
+<br></br>
+
+
+
+<h2> PRIVACY & TERMS:</h2>
+<h4> Instead of writing long lines of text that no one will read, I will simply summarize the most important stuff - I have absolutely no intentions to screw with you and the same I expect from you as well. Your information will not be exposed to third parties.   </h4>
+
+
+<br></br>
+<h2> CONTACT:</h2>
 <h4> If the text above doesn't make sense to you or you simply have questions/feedback/suggestions or whatever, feel free to drop me a line :) - <%= mail_to "emils.veveris@thrillengine.com", "emils.veveris@thrillengine.com" %> </h4>  
-
-
-
-
-
+<br></br>
 
 </div>
 
