--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -107,6 +107,14 @@
   <% end %>
   </ul>
 
+
+<h3>Please note:</h3> 
+  <ul>
+  	
+  	<li> For full pricing and availability, please contact - <%= mail_to "emils.veveris@thrillengine.com", "emils.veveris@thrillengine.com" %>  </li>
+  </ul>
+
+
 </div>
 
 
@@ -205,6 +213,7 @@
 
 <ul>
 	<li>Name of the Place </li>
+	<li> Room Type </li>
 	<li>Dates </li>
 	<li>Number of People </li>
 	<li>All the Extras You want (lessons/rentals and etc.) </li>
