--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,10 +1,10 @@
 
 .container {
-    width: 940px; 
+    width: 980px; 
 }
 
 body {    
-   background:url(groovepaper.png); 
+   background:url(srf.png); 
    border-top:solid #808080 1px;
     
 }
@@ -14,7 +14,7 @@ body {
 header {
     padding-top: 20px;
     height:33px;
-    margin-bottom: 25px;
+    margin-bottom: 45px;
     background:#fff;
     -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
@@ -79,15 +79,13 @@ footer {
     height:80px;    
     text-align:right;  
     margin-top: 0px;  
-    background:url(subtle_freckles.png); 
-    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 0px rgba(255, 255, 255, 0.25);
-    -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 0px rgba(255, 255, 255, 0.25);
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 0px rgba(255, 255, 255, 0.25);  
+    
+     
 }
 
 footer p {	 
     margin-top: 17px;
-    font: 14px  Arial, sans-serif;
+    font: 12px  Arial, sans-serif;
     color: #808080;
     margin-left: 12px; 
     float:left;	
@@ -96,7 +94,7 @@ footer p {
 footer nav {
     float: none;
     color: #808080;
-    font: 14px  Arial, sans-serif;
+    font: 12px  Arial, sans-serif;
     padding: 15px;
     margin-right: -7px; 
     margin-top: 3px;
@@ -115,46 +113,117 @@ footer nav ul li a:hover {
 
 
 .footmid {	
-	border-top: 1px solid #efefef;
+	border-top: 1px solid #fff;
     background:#fff; 
 	height:50px;
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);	
+	margin-top: -10px;
+
+border-right-width: 1px;
+border-bottom-width: 1px;
+border-left-width: 1px;
+border-top-style: solid;
+border-right-style: solid;
+border-bottom-style: solid;
+border-left-style: solid;
+border-top-color: #D4D4D4;
+border-right-color: #D4D4D4;
+border-bottom-color: #D4D4D4;
+border-left-color: #D4D4D4;
+
+box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
+
 }
+
 
 
 /* About Title */
 
 div.div-title {  
-    position: relative; 
-	z-index: 5; 
+    
+	border-top: solid 6px #000;
 	margin-bottom: 0px; 
-	background: url(ccr.jpg); 
-	height:282px;   
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
+	background:url(txt1.jpg);
+	height:230px;   
+	
+	
+border-right-width: 1px;
+border-bottom-width: 1px;
+border-left-width: 1px;
+border-top-style: solid;
+border-right-style: solid;
+border-bottom-style: solid;
+border-left-style: solid;
+border-top-color: #D4D4D4;
+border-right-color: #D4D4D4;
+border-bottom-color: #D4D4D4;
+border-left-color: #D4D4D4;
+
+box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
+
+
 }
 
+
+
+
+div.div-title  ul {
+	
+	
+	margin-left: 205px;
+	margin-top: -10px;
+	
+	
+}
+
+div.div-title  ul li{
+	
+	
+	float:left;
+	margin-right: 30px;
+	margin-left: 0px;
+	width: 160px;
+	
+}
+
+div.div-title  h2 {
+	
+	font-size: 12px;
+	font-weight: bold;
+	color: #545454;
+	
+}
+
+div.div-title h5 {
+	
+   margin-top: 0px;
+   text-align: center; 
+   color: #bababa;
+   font-size: 14px;
+	
+}
+
+
+
 div.div-title h3 {  
-    font: 48px Insolent-Italic;  
+    
+    font: 38px Helvetica, Arial; 
 	font-weight: 700; 
 	text-align: center; 
-	color: #fff; 
-	text-transform: uppercase; 
-	position: absolute; 
-	z-index: 10; 
-	top: 95px; 
-	left: 0px;  
-	top center repeat; 
-	margin-left: 15px; 
-	padding: 0 10px; 
-	-webkit-font-smoothing: antialiased; 
-	line-height: 40px; 
+	color: #292929; 	 
+	padding: 25px;
+	top: 30px;
+	 
+	
+	
 	
 }
 
 div.div-title a {
-    color: #fff;
-    text-shadow: 0px 1px 0px #000, 0px 2px 0px #000, 0px 3px 0px #000, 0px 4px 0px #000, 0px 5px 0px #000, 0px 6px 0px #000, 0px 7px 0px #333, 0px 8px 7px #001135;
-
+    color: #000;
+    text-shadow: 0 1px 2px white;
+    
+    
+    
 }
 
 div.div-title a:hover {
@@ -162,6 +231,57 @@ div.div-title a:hover {
     text-decoration: none;
 }
 
+.search {
+	
+margin-left: 240px;
+margin-top: 70px;
+
+width: 500px;
+	
+}
+
+.textfield {
+
+border: 1px solid #E6C000;
+border-radius: 4px;
+-moz-border-radius: 4px;
+-webkit-border-radius: 4px;
+background: white;
+padding: 11px 12px 10px;
+color: #888;
+font: bold 18px/20px arial;
+box-shadow: inset 0 5px 5px #E8E8E8;
+width: 350px;
+height: 20px;
+
+
+
+}
+
+.searchb {
+
+float: right;
+border: 1px solid #A1A1A1;
+border-radius: 4px;
+-moz-border-radius: 4px;
+-webkit-border-radius: 4px;
+color: #666;
+font: bold 18px HelveticaNeue, Helvetica, sans-serif;
+display: block;
+margin: 1px 0;
+padding: 0 18px;
+height: 41px;
+vertical-align: middle;
+background: #CECFD0;
+background: -moz-linear-gradient(top, white, #CECFD0);
+background: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#CECFD0));
+background: -o-linear-gradient(white, #CECFD0);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#cecfd0');
+cursor: pointer;	
+
+margin-top: -52px;	
+	
+}
 
 /* Trip index page */
 
@@ -170,7 +290,24 @@ div.div-title a:hover {
 	background:#fff; 
 	padding: 15px;
 	min-height: 610px;
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
+	box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
+	
+    
+    border: 1px solid #D4D4D4;
+border-top-width: 1px;
+border-right-width: 1px;
+border-bottom-width: 1px;
+border-left-width: 1px;
+border-top-style: solid;
+border-right-style: solid;
+border-bottom-style: solid;
+border-left-style: solid;
+border-top-color: #D4D4D4;
+border-right-color: #D4D4D4;
+border-bottom-color: #D4D4D4;
+border-left-color: #D4D4D4;
+    
+    
 }
 
 
@@ -330,12 +467,80 @@ option {
     background: #fff;  	
 }
 
+
+.low {
+	
+height: 180px;
+background:url(txt1.jpg);	
+
+border-top: solid 5px #D4D4D4;
+
+border-right-width: 1px;
+border-bottom-width: 1px;
+border-left-width: 1px;
+border-top-style: solid;
+border-right-style: solid;
+border-bottom-style: solid;
+border-left-style: solid;
+border-top-color: #D4D4D4;
+border-right-color: #D4D4D4;
+border-bottom-color: #D4D4D4;
+border-left-color: #D4D4D4;
+
+box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
+	
+}
+
+
+.lowabout {
+	
+	  
+	font:12px Helvetica,Arial,sans-serif;  
+	width: 540px;
+	padding: 20px;
+	height: 150px;
+	line-height: 150%;
+	
+	
+	
+}
+
+
+
+.low h4 {
+	
+	font:22px Helvetica,Arial,sans-serif; 
+	color: #545454;
+	font-weight: bold;
+	
+}
+
+
+
+
+
+
 /* Trip show page */
 
 .tripshow {	 
     background:#fff;          
     padding: 1em;
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
+    box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
+	
+    
+    border: 1px solid #D4D4D4;
+border-top-width: 1px;
+border-right-width: 1px;
+border-bottom-width: 1px;
+border-left-width: 1px;
+border-top-style: solid;
+border-right-style: solid;
+border-bottom-style: solid;
+border-left-style: solid;
+border-top-color: #D4D4D4;
+border-right-color: #D4D4D4;
+border-bottom-color: #D4D4D4;
+border-left-color: #D4D4D4;
     border-top: 1px solid #f4f4f4;
 }
 
@@ -344,7 +549,19 @@ option {
 	 padding: 1em;
 	 background:url(col2.png); 
 	 
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);
+	border-right-width: 1px;
+border-bottom-width: 1px;
+border-left-width: 1px;
+border-top-style: solid;
+border-right-style: solid;
+border-bottom-style: solid;
+border-left-style: solid;
+border-top-color: #D4D4D4;
+border-right-color: #D4D4D4;
+border-bottom-color: #D4D4D4;
+border-left-color: #D4D4D4;
+
+box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
 
      height:20px; 
 }
@@ -565,30 +782,45 @@ option {
 /* About page */
 
 .about {
-	background: url('sjumps2.jpg');
-    width:940px;
-    height:600px;	
-   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15); -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15); box-shadow: 0 1px 2px rgba(0,0,0,.15);	
-}
+	border-top: 5px solid #efefef;
+	background: #fff;
+    
+    
+    border-right-width: 1px;
+border-bottom-width: 1px;
+border-left-width: 1px;
+border-top-style: solid;
+border-right-style: solid;
+border-bottom-style: solid;
+border-left-style: solid;
+border-top-color: #D4D4D4;
+border-right-color: #D4D4D4;
+border-bottom-color: #D4D4D4;
+border-left-color: #D4D4D4;
 
-
+box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
+    
+    
+    }
 
 .mbox {	
     display: inline-block;
     text-align:left;
-    font: 22px Insolent-Italic, Arial, sans-serif;
-    text-transform: uppercase;
-    text-shadow: 0px 0px #000, 1px 1px #000, 2px 2px #000, 3px 3px #000, 4px 4px #000;
-    color: #fff; 
+    font: 32px  Arial, sans-serif;
+    
+    
+    color: #000; 
     padding: 10px;	
     margin-left:20px;
     margin-top:10px;  
-    border-bottom:double #fff;	    
+    border-bottom:double #fff;	
+    font-weight: bold;    
 }
 
 
 .mbox h5 {	
-   font: 16px Arial, sans-serif;	
+   font: 16px Arial, sans-serif;
+   color: 	
 }
 
 .mbox h3 {	
@@ -601,7 +833,7 @@ option {
 	
 	display: inline-block;
 	 text-align:left;
-	 width: 400px;	 
+	 width: 800px;	 
 	 margin-left: 20px;
 	 margin-top: 5px;
 	 padding: 10px;
@@ -614,12 +846,11 @@ option {
 
 .story h4 {
 	
-	color: #fff; 
-	font-size:16px;
+	color: #5e5e5e; 
+	font-size:14px;
 	font-weight: bold;
-	font-family: Insolent-Italic, Arial, sans-serif;
-	text-shadow: 0px 0px #000, 1px 1px #000, 2px 2px #000;
-	text-transform: uppercase;
+	font-family: Arial, sans-serif;
+	
 	
 }
 
@@ -634,6 +865,7 @@ option {
 	color: #ff8080;
 	
 }
+
 
 /* Buttons */
 
@@ -831,7 +1063,7 @@ a.back_button:hover {
 .paginator2 {
 	text-align:right;
 	font-size: 12px;
-	border-top: solid 1px #c0c0c0;
+	
 }
 
 /*  */
