--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,13 +8,14 @@
   
   <nav class="round">   
       <ul>
-       
-      <li> Get in touch: <%= mail_to "emils.veveris@thrillengine.com", "emils.veveris@thrillengine.com" %>  </li>
+       <li> <%= link_to "Terms & Privacy", about_path %>  </li>
+      <li> Get in touch:  </li>
       <li> <%= link_to "Facebook", 'http://www.facebook.com/pages/Thrill-Engine/199223676806364' %>  </li>
       
       <li> <%= link_to "Twitter", 'http://twitter.com/#!/theThrillEngine' %>  </li>
       <li> <%= link_to "Vimeo", 'https://vimeo.com/39621018' %>  </li>
-      
+      <li> <%= link_to "Tumblr", 'http://thrillengine.tumblr.com/' %>  </li>
+      <li> <%= link_to "Pinterest", 'http://pinterest.com/thrillengine/life-s-better-when-you-do-epic-sh-t/' %>  </li>
       
     </ul>
   </nav>
