--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,8 +6,8 @@
    <nav class="round">
     <ul>      
       
-      <li><%= link_to "About", about_path %>  </li>
-      
+      <li><%= link_to "The Concept", about_path %>  </li>
+      <li><%= link_to "Contact", about_path %>  </li>
       
       <% if signed_in? %>
       <li><%= link_to "Profile", current_user %>  </li>
