--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,7 +3,8 @@
 
 <div class="mbox"
 
-<h3> Adventures That You Are Proud Of!
+<h3> Remember the last time when you were traveling with friends, getting into adventures and thinking to yourself - Damn, this is life? Thrill Engine is here to give just that and lot's of it!
+
 
  </h3>
 
@@ -19,7 +20,13 @@
 
 
 <h2>THE STORY SO FAR:</h2>
-<h4> Thrill Engine currently is a work in progress, one man operation. Built for finding unique life changing, travel experiences, based on action sports. </h4>
+
+
+<h4> Thrill Engine currently is a work in progress, one man operation. Built for finding unique life changing, travel experiences, based on action sports. Only 30% ready, but already open for bookings with a purpose to understand you better and to build things that matter. The best is yet to come - <%= link_to "sign up to follow updates and access some pretty awesome deals.", trips_path %>   </h4>
+
+<br></br>
+
+<h4> Ohh and if you like what you see and think you can help, just let me know. I could use some tech help.  </h4>
 
 <br></br>
 
@@ -27,7 +34,7 @@
 <h4>  In the current version all the bookings are handled manually - just email me about booking inquiry and I’ll give you details about full pricing and availability </h4> 
 <br></br>
 
-<h4> However, if you don’t feel comfortable with the fact that this project is still largely under development, then I advise you to book directly from the property owners or similar services (just google the name of the houses). But for all the others I am open to help you find the best trip you ever had! </h4>
+<h4> However, if you don’t feel comfortable with the fact that this project is still largely under development, then I advise you to book directly from the property owners or similar services (just google the name of the houses). But for all the others I am open to help you find  <%= link_to "the best trip you ever had!", trips_path %> </h4>
 
 
 
