--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -4,7 +4,7 @@
 }
 
 body {    
-   background:url(srf.png); 
+   background:url(srf.jpg); 
    border-top:solid #808080 1px;
     
 }
@@ -138,27 +138,22 @@ box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
 
 /* About Title */
 
+
+.title h3 {  
+    
+    font: 38px Helvetica, Arial; 
+	font-weight: 700; 
+	text-align: center; 
+	color: #292929; 	 
+	padding: 25px;
+	top: 30px;
+	 	
+}
+
+
 div.div-title {  
     
-	border-top: solid 6px #000;
-	margin-bottom: 0px; 
-	background:url(txt1.jpg);
-	height:230px;   
 	
-	
-border-right-width: 1px;
-border-bottom-width: 1px;
-border-left-width: 1px;
-border-top-style: solid;
-border-right-style: solid;
-border-bottom-style: solid;
-border-left-style: solid;
-border-top-color: #D4D4D4;
-border-right-color: #D4D4D4;
-border-bottom-color: #D4D4D4;
-border-left-color: #D4D4D4;
-
-box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
 
 
 }
@@ -166,16 +161,16 @@ box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
 
 
 
-div.div-title  ul {
+.title  ul {
 	
 	
-	margin-left: 205px;
+	margin-left: 215px;
 	margin-top: -10px;
 	
 	
 }
 
-div.div-title  ul li{
+.title  ul li{
 	
 	
 	float:left;
@@ -185,7 +180,7 @@ div.div-title  ul li{
 	
 }
 
-div.div-title  h2 {
+div.title  h2 {
 	
 	font-size: 12px;
 	font-weight: bold;
@@ -233,8 +228,8 @@ div.div-title a:hover {
 
 .search {
 	
-margin-left: 240px;
-margin-top: 70px;
+margin-left: 250px;
+margin-top: 30px;
 
 width: 500px;
 	
@@ -287,7 +282,7 @@ margin-top: -52px;
 
 .mid {	
 	border-top: 5px solid #efefef;
-	background:#fff; 
+	background:url(te2.jpg);
 	padding: 15px;
 	min-height: 610px;
 	box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
@@ -471,21 +466,21 @@ option {
 .low {
 	
 height: 180px;
-background:url(txt1.jpg);	
+background:url(im.png);	
 
 border-top: solid 5px #D4D4D4;
 
-border-right-width: 1px;
+
 border-bottom-width: 1px;
-border-left-width: 1px;
+
 border-top-style: solid;
 border-right-style: solid;
 border-bottom-style: solid;
 border-left-style: solid;
 border-top-color: #D4D4D4;
-border-right-color: #D4D4D4;
+border-right-color: #000;
 border-bottom-color: #D4D4D4;
-border-left-color: #D4D4D4;
+border-left-color: #000;
 
 box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
 	
@@ -498,7 +493,7 @@ box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
 	font:12px Helvetica,Arial,sans-serif;  
 	width: 540px;
 	padding: 20px;
-	height: 150px;
+	height: 230px;
 	line-height: 150%;
 	
 	
@@ -510,15 +505,26 @@ box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
 .low h4 {
 	
 	font:22px Helvetica,Arial,sans-serif; 
-	color: #545454;
+	color: #fff;
 	font-weight: bold;
 	
 }
 
 
+#mc_embed_signup {
+	
+background:url(im2.png);
 
+		
+}
 
-
+#mc_embed_signup h4 {
+	
+	font:18px;
+	
+	
+	
+}
 
 /* Trip show page */
 
@@ -806,15 +812,17 @@ box-shadow: inset 0 0 4px rgba(0,0,0,0.05),0 0 9px rgba(0,0,0,0.1);
 .mbox {	
     display: inline-block;
     text-align:left;
-    font: 32px  Arial, sans-serif;
+    font: 24px  Arial, sans-serif;
     
     
     color: #000; 
     padding: 10px;	
     margin-left:20px;
-    margin-top:10px;  
+    margin-top:20px; 
+    margin-right: 40px; 
     border-bottom:double #fff;	
-    font-weight: bold;    
+    font-weight: bold; 
+       
 }
 
 
