--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,10 +1,9 @@
 
-<div class="div-title">
-  
+ <div class="title">
  
-  <h3> Book Places Where the Action Is </h3>
-
-  <ul>
+ <h3> Book the Perfect Adventure Holiday </h3>
+ 
+ <ul>
   	<li> <h2> Surfing, Kiting, Snowboarding, Skiing and more to come.  </h2> </li>
   	
   	
@@ -18,6 +17,19 @@
   	
   	
   </ul>	
+ 
+ 
+ 
+ </div>
+ 
+ <br></br>
+
+<div class="div-title">
+  
+ 
+  
+
+
 
    <div class="search">
 
@@ -31,6 +43,8 @@
  
  
 </div>
+
+<br></br>
 
 <div class="mid">
  
@@ -141,13 +155,10 @@
   		 
   		 <%= link_to "The story so far →", about_path %> </h4> 
 
-<br></br>
 
 
-  <a href="https://twitter.com/theThrillEngine" class="twitter-follow-button" data-show-count="false">Follow @theThrillEngine</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-  
-  <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FThrill-Engine%2F199223676806364&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=verdana&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowTransparency="true"></iframe>
+
+  <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FThrill-Engine%2F199223676806364&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=dark&amp;font&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px; margin-top:20px; " allowTransparency="true"></iframe>
   
   
   </div> 
@@ -157,13 +168,13 @@
   <!-- Begin MailChimp Signup Form -->
 <link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-	#mc_embed_signup{ padding:20px;    float:right; font:18px Helvetica,Arial,sans-serif; color:#000; width:370px; height: 140px;  border-bottom: none; margin-top: -200px; border-left: 1px dotted #D4D4D4; }
+	#mc_embed_signup{ padding:15px;  float:right;  color:#ff7575; font-size: 18px; width:370px; height: 141px;  border-bottom: none; margin-top: -270px; border-left: 1px dotted #D4D4D4; }
 	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
 <div id="mc_embed_signup">
 <form action="http://thrillengine.us4.list-manage.com/subscribe/post?u=b00a6ce905026bcb1bfd68811&amp;id=ffa803ed98" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-	<label for="mce-EMAIL"> Hot Deals. Updates & New Places. Sign Up Today! </label>
+	<h4> Sign Up for Updates & Awesome Deals  </h4>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="your email address" required>
 	<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 </form>
