--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -158,8 +158,7 @@
 
 
 
-  <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FThrill-Engine%2F199223676806364&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=dark&amp;font&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px; margin-top:20px; " allowTransparency="true"></iframe>
-  
+  <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FThrill-Engine%2F199223676806364&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px; margin-top:15px; " allowTransparency="true"></iframe>
   
   </div> 
   
@@ -168,7 +167,7 @@
   <!-- Begin MailChimp Signup Form -->
 <link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-	#mc_embed_signup{ padding:20px;  float:right;  color:#ff7575; font-size: 18px; width:370px; height: 143px;  border-bottom: none; margin-top: -200px; border-left: 1px dotted #D4D4D4; }
+	#mc_embed_signup{ padding:20px;  float:right;  color:#ff7575; font-size: 18px; width:370px; height: 143px;  border-bottom: none; margin-top: -190px; border-left: 1px dotted #D4D4D4; }
 	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
