--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -203,23 +203,23 @@
      
 <h1> AWESOME </h1>
 	
-<h3>	For Booking Enquiries, Contact Me: </h3>
-
-<%= mail_to "emils.veveris@thrillengine.com", "emils.veveris@thrillengine.com" %>
-
-<br></br>
-
-<h3> And Just Let Me Know: </h3>
-
-<ul>
-	<li>Name of the Place </li>
-	<li> Room Type </li>
-	<li>Dates </li>
-	<li>Number of People </li>
-	<li>All the Extras You want (lessons/rentals and etc.) </li>
-	<li>And questions, if you have. </li>
-</ul>	
-
+<div id="wufoo-z7x3x5">
+Fill out my <a href="http://thrill.wufoo.com/forms/z7x3x5">online form</a>.
+</div>
+<script type="text/javascript">var z7x3x5;(function(d, t) {
+var s = d.createElement(t), options = {
+'userName':'thrill', 
+'formHash':'z7x3x5', 
+'autoResize':true,
+'height':'677',
+'async':true,
+'header':'show'};
+s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'wufoo.com/scripts/embed/form.js';
+s.onload = s.onreadystatechange = function() {
+var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+try { z7x3x5 = new WufooForm();z7x3x5.initialize(options);z7x3x5.display(); } catch (e) {}};
+var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+})(document, 'script');</script>
 
 <h3> Cheers, <br></br>  Emils V. </h3>
  
