--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,7 +1,7 @@
 
  <div class="title">
  
- <h3> Book the Perfect Adventure Holiday </h3>
+ <h3> Find the Epic Action Holiday </h3>
  
  <ul>
   	<li> <h2> Surfing, Kiting, Snowboarding, Skiing and more to come.  </h2> </li>
@@ -74,7 +74,7 @@
           
              
            
-           <%= submit_tag "Find", :class => "find" %>
+           <%= submit_tag "", :class => "find" %>
            <% end %>
         </form>   
  
@@ -173,7 +173,7 @@
 </style>
 <div id="mc_embed_signup">
 <form action="http://thrillengine.us4.list-manage.com/subscribe/post?u=b00a6ce905026bcb1bfd68811&amp;id=ffa803ed98" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-	<h4> Sign Up for Updates & Awesome Deals  </h4>
+	<h4> Sign Up for Exclusive Updates! </h4>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="your email address" required>
 	<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 </form>
