--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -22,7 +22,7 @@
 <h2>THE STORY SO FAR:</h2>
 
 
-<h4> Thrill Engine currently is a work in progress, one man operation. Built for finding unique life changing, travel experiences, based on action sports. Only 10% ready, but already open for bookings with a purpose to understand you better and to build things that matter. The best is yet to come - <%= link_to "sign up to follow updates and access some pretty awesome deals.", trips_path %>   </h4>
+<h4> Thrill Engine currently is a work in progress, one man operation. Built for finding unique life changing, travel experiences, based on action sports. Only 10% ready, but already open for bookings with a purpose to understand you better and to build things that matter. The best is yet to come - <%= link_to "sign up to follow updates ", trips_path %>   </h4>
 
 <br></br>
 
@@ -43,7 +43,7 @@
 
 
 <h2> PRIVACY & TERMS:</h2>
-<h4> Instead of writing long lines of text that no one will read, I will simply summarize the most important stuff - I have absolutely no intentions to screw with you and the same I expect from you as well. Your information will not be exposed to third parties.   </h4>
+<h4>  Long lines of text that no one will read will come soon, but I will simply summarize the most important stuff, now - I have absolutely no intentions to screw with you and the same I expect from you as well. Your information will not be exposed to third parties.   </h4>
 
 
 <br></br>
